src/test/deca/syntax/invalid/custom/printlnx_without_par.deca
// Description:
//    printlnx instruction without parents
//
// Resultats:
//    ligne 11 : Error, missing '(' at '"a string"'
//
// Historique:
//    cree le 11/01/2022

{
printlnx"0x1234FEA3";
}